--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
+    <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!--
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Cloud Wine</title>
+    <title>Cloud Wine </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
